# pyspark-template

./: .gitignore  README.md  pyproject.toml
pyspark_demo/: main.py  use_udf.py
pyspark_demo/data/: generate_data.py
pyspark_demo/models/: activity.py  user.py
pyspark_demo/utils/: generate_data.py  transformations.py  udfs.py
pyspark_template/: main.py  use_udf.py
pyspark_template/models/: activity.py  content.py  user.py
pyspark_template/transformations/: feature_engineering.py  filtering.py
pyspark_template/utils/: generate_data.py  math_ops.py  spark_session.py  udfs.py
tests/: test_dfs.py  test_math_ops.py  test_utils.py
tests/fixtures/: data.py  spark_session.py
