[tool.poetry]
name = "pyspark-demo"
version = "0.1.0"
description = ""
authors = ["Cameron Gridley <cgridley@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyspark = "^3.5.1"
pydantic = "^2.6.4"
pytest = "^8.1.1"
chispa = "^0.10.0"
faker = "^25.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
